--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,10 @@ jobs:
         run: docker build -t my-docker-hello-world .
 
       - name: Push Docker Image to GitHub Packages
-        run: docker tag my-docker-hello-world docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
-        run: echo ${{ secrets.PACKAGES_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
-        run: docker push docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
+        run: |
+           docker tag my-docker-hello-world docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
+           echo ${{ secrets.PACKAGES_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
+           docker push docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
 
       - name: Deploy to Docker
         run: |
