--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
-# .github/workflows/ci.yml
 name: CI
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
@@ -17,12 +16,10 @@ jobs:
       - name: Build Docker Image
         run: docker build -t my-docker-hello-world .
 
+      - name: Login to GitHub Packages
+        run: echo ${{ secrets.PACKAGES_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
+
       - name: Push Docker Image to GitHub Packages
         run: |
-           docker tag my-docker-hello-world docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
-           echo ${{ secrets.PACKAGES_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.repository_owner }} --password-stdin
-           docker push docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
-
-      - name: Deploy to Docker
-        run: |
-          docker run -p 5000:5000 -d --name my-hello-world my-docker-hello-world:latest
+          docker tag my-docker-hello-world docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
+          docker push docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
