--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,6 @@ jobs:
 
       - name: Push Docker Image to GitHub Packages 
         run: |
-          docker tag my-docker-hello-world docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
-          docker push docker.pkg.github.com/${{ github.repository_owner }}/${{ github.repository_name }}/my-docker-hello-world:latest
+         docker tag my-docker-hello-world docker.pkg.github.com/amiradagdoug/my-docker-hello-world:latest
+         docker push docker.pkg.github.com/amiradagdoug/my-docker-hello-world:latest
+        
