--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm install
 
       - name: Build the docker image
-        run: docker build -t nodejs-image_finall .
+        run: docker build -t nodejs-image_finale .
 
       - name: Log in the dockerhub
         uses: docker/login-action@v1
@@ -26,8 +26,8 @@ jobs:
 
       - name: Push image to Dockerhub
         run: |
-          docker tag nodejs-image_finall ${{ secrets.DOCKER_USERNAME }}/nodejs-image_finall:latest
-          docker push ${{secrets.DOCKER_USERNAME }}/nodejs-image_finall:latest
+          docker tag nodejs-image_finale ${{ secrets.DOCKER_USERNAME }}/nodejs-image_finale:latest
+          docker push ${{secrets.DOCKER_USERNAME }}/nodejs-image_finale:latest
 
 
   deploy:
@@ -42,8 +42,9 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
           
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_finall:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_final:latest
+            sudo docker stop nodejs-image_finale || true
+            sudo docker rm nodejs-image_finale || true
            
-          
-            sudo docker run -d -p 3005:3000 --name=nodejs-image_finall ${{ secrets.DOCKER_USERNAME }}/nodejs-image_finall:latest
+            sudo docker run -d -p 3008:3000 --name cc nodejs-image_finale ${{ secrets.DOCKER_USERNAME }}/nodejs-image_finale:latest
             sudo docker ps 
