--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -43,6 +43,7 @@ jobs:
           script: |
           
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
-     
+            sudo docker stop nodejs-image_ff || true
+            sudo docker rm nodejs-image_ff || true
             sudo docker run -d -p 3008:3000 --name=nodejs-image_ff ${{ secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
             sudo docker ps 
