--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -40,8 +40,8 @@ jobs:
         - name: Install dependencies
           run: npm install
         
-        - name: Run unit tests
-          run: npm run test:unit
+        - name: Run junit tests
+          run: npm run test:junit
         
         - name: Run static code analysis
           run: npm run lint
@@ -53,6 +53,7 @@ jobs:
           run: npx mocha --reporter mocha-junit-reporter > test-report.xml
         
         - name: Upload test report
+          if: always()
           uses: actions/upload-artifact@v2
           with:
            name: test-report
