--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mocha-junit-reporter": "^2.0.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.3",
+    "jest-junit": "^13.0.2"
   }
 }
