--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mocha-junit-reporter": "^2.0.0"
   },
   "devDependencies": {
-    "jest": "^27.4.3",
+    "eslint": "^8.57.0",
+    "jest": "^27.5.1",
     "jest-junit": "^13.0.2"
   }
 }
