--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "mocha-junit-reporter": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "2.34.0",
+    "@typescript-eslint/parser": "2.34.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.1.0",
+    "eslint-plugin-import": "2.21.1",
+    "eslint-plugin-header": "3.0.0",
     "jest": "^27.5.1",
     "jest-junit": "^13.0.2"
   }
