--- a/.github/workflows/cicd_pipeline_staging.yml
+++ b/.github/workflows/cicd_pipeline_staging.yml
@@ -51,7 +51,7 @@ jobs:
 
   staging:
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
     if: github.ref == 'refs/heads/staging'
     steps:
       - name: Checkout repository
@@ -70,7 +70,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout repository
