--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Build the docker image
-        run: docker build -t nodejs-image_ff .
+        run: docker build -t nodejs-image_amira .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -27,8 +27,8 @@ jobs:
 
       - name: Push image to Docker Hub
         run: |
-          docker tag nodejs-image_ff ${{ secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
-          docker push ${{secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
+          docker tag nodejs-image_amira ${{ secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
+          docker push ${{secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
 
   test:
     runs-on: ubuntu-latest
@@ -65,8 +65,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
-            sudo docker stop nodejs-image_ff || true
-            sudo docker rm nodejs-image_ff || true
-            sudo docker run -d -p 3008:3000 --name=nodejs-image_ff ${{ secrets.DOCKER_USERNAME }}/nodejs-image_ff:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
+            sudo docker stop nodejs-image_amira || true
+            sudo docker rm nodejs-image_amira || true
+            sudo docker run -d -p 3008:3000 --name=nodejs-image_amira ${{ secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
             sudo docker ps
