--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -66,6 +66,7 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
-    
+            sudo docker stop nodejs-image_amira || true
+            sudo docker rm nodejs-image_amira || true
             sudo docker run -d -p 3008:3000 --name=nodejs-image_amira ${{ secrets.DOCKER_USERNAME }}/nodejs-image_amira:latest
             sudo docker ps
